data table added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,98 @@
 <h2>employee</h2>
-<div class="example-container">
 
-  <form [formGroup]="employeeForm">
-      <mat-form-field>
-          <input matInput placeholder="fname" formControlName="fname">
-      </mat-form-field>
+  {{employeeForm.value | json}}
+  <form [formGroup]="employeeForm" class="example-container">
+    <mat-form-field>
+      <input matInput placeholder="fname" formControlName="fname">
+    </mat-form-field>
 
-      <mat-form-field>
-          <textarea matInput placeholder="jobDesp" formControlName="jobDesp"></textarea>
-      </mat-form-field>
+    <mat-form-field>
+      <textarea matInput placeholder="jobDesp" formControlName="jobDesp"></textarea>
+    </mat-form-field>
 
-      <mat-form-field>
-          <mat-select placeholder="Select" formControlName="city">
-            <mat-option *ngFor="let city of cities" [value]="city">{{city}}</mat-option>
-          </mat-select>
-      </mat-form-field>
+    <mat-form-field>
+      <mat-select placeholder="Select" formControlName="city">
+        <mat-option *ngFor="let city of cities" [value]="city">{{city}}</mat-option>
+      </mat-select>
+    </mat-form-field>
 
-      <mat-radio-group>
-        <mat-radio-button value="female" formControlName="gender">female</mat-radio-button>
-        <mat-radio-button value="male" formControlName="gender">male</mat-radio-button>
-      </mat-radio-group>
+    <mat-radio-group formControlName="gender">
+      <mat-radio-button value="female">female</mat-radio-button>
+      <mat-radio-button value="male">male</mat-radio-button>
+    </mat-radio-group>
 
-      <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="joiningDate">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="joiningDate">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
-      <mat-slide-toggle formControlName="slide">Slide me!</mat-slide-toggle>
-      <mat-slider formControlName="slider"></mat-slider>
+    <mat-slide-toggle formControlName="slide">Slide me!</mat-slide-toggle>
+    <mat-slider formControlName="slider"></mat-slider>
 
-      <mat-autocomplete #auto="matAutocomplete" formControlName="autoComp">
-          <mat-optgroup *ngFor="let city of cities | async" [label]="group.name">
-            <mat-option *ngFor="let option of group.options" [value]="option">
-              {{ option.name }}
-            </mat-option>
-          </mat-optgroup>
-        </mat-autocomplete>
+    <mat-form-field>
+      <input type="text" matInput formControlName="autoComp" [matAutocomplete]="auto">
 
-        <mat-checkbox formControlName="terms" >I accept terms and conditions</mat-checkbox>
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let city of cities" [value]="city">
+          {{ city }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <mat-checkbox formControlName="terms">I accept terms and conditions</mat-checkbox>
 
-        <button class="btn btn-info" [disabled]="!employeeForm.valid" (click)="gotoEmployees();">{{id?"Edit":"Add"}}</button>
-      </form>
-    </div>
+    <button mat-button class="btn btn-info" [disabled]="!employeeForm.valid" (click)="gotoEmployees();">{{id?"Edit":"Add"}}</button>
+  </form>
+
+        <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" 
+            public id: number, 
+    public fname: string,
+    public jobDesp: string,
+    public city: string,
+    public gender: string,
+    public joiningDate: string,
+    public slide: string,
+    public autoComp: string,
+    public terms: string,
+            -->
+
+<div class="example-container mat-elevation-z8">
+    <mat-table #table [dataSource]="dataSource">
+  
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+  
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+        <mat-cell *matCellDef="let employee"> {{employee.id}} </mat-cell>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-cell *matCellDef="let employee"> {{employee.fname}} </mat-cell>
+      </ng-container>
+  
+      <!-- Weight Column -->
+      <ng-container matColumnDef="gender">
+        <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
+        <mat-cell *matCellDef="let employee"> {{employee.gender}} </mat-cell>
+      </ng-container>
+  
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="joiningDate">
+        <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
+        <mat-cell *matCellDef="let employee"> {{employee.joiningDate}} </mat-cell>
+      </ng-container>
+  
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
+
+    
+
+
+
