--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,18 @@
 .example-container {
     display: flex;
     flex-direction: column;
+    align-self: center;
+    padding-left: 25%;
+    max-height: 500px;
+    min-width: 300px;
   }
   
 .example-container > * {
-    width: 100%;
+    width: 50%;
+  }
+  
+  .mat-table {
+    overflow: auto;
+    max-height: 500px;
   }
   
