--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,17 +2,31 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-    padding-left: 25%;
-    max-height: 500px;
+    margin:2% 25%;
+    padding:10px;
+
+    max-height: auto;
     min-width: 300px;
   }
   
 .example-container > * {
-    width: 50%;
+    width: 100%;
   }
   
   .mat-table {
     overflow: auto;
     max-height: 500px;
+  }
+
+  .head{
+    font-weight: bold;
+    text-align:center;
+    font-size: 20px;
+    color:white;
+    background-color:#0099ff; 
+    min-height: 50px;
+    padding-top:10px;
+
+
   }
   
